# origin

./: .gitignore
Lesson1/Task1/: homework1.cpp  homework1.sln  homework1.vcxproj
Lesson10/task1/: CMakeLists.txt  Source1.cpp
Lesson10/task2/: CMakeLists.txt  Figure.cpp  Quadrangle.cpp  Quadrangle.h  Triangle.cpp  kvadrat.cpp  kvadrat.h  parallelogramm.cpp  parallelogramm.h  pryamoug_triangle.cpp  pryamoug_triangle.h  pryamougolnik.cpp  pryamougolnik.h  ravnobedr_triangle.cpp  ravnobedr_triangle.h  ravnostor_triangle.cpp  ravnostor_triangle.h  romb.cpp  romb.h  task3.cpp
Lesson11.1/Greeterclient/: Greeterclient.cpp  Greeterclient.sln  Greeterclient.vcxproj
Lesson11.1/Greeterlib/: Greeter.h  Greeterlib.vcxproj
Lesson11/task1/: Greeter_client.vcxproj  Greeter_lib.sln  Greeter_lib.vcxproj
Lesson11/task2/: Leaver_client.cpp  Leaver_client.sln  Leaver_client.vcxproj  Leaver_dll.sln  Leaver_dll.vcxproj
Lesson11/task3/: CMakeLists.txt  Leaver.cpp  Leaver.h
Lesson4/task1/: task1.cpp  task1.sln  task1.vcxproj
Lesson4/task2/: task2.cpp  task2.sln  task2.vcxproj
Lesson5/task1/: task1.cpp  task1.sln  task1.vcxproj
Lesson5/task2/: task2.cpp  task2.sln  task2.vcxproj
Lesson5/task3/: task3.cpp  task3.sln  task3.vcxproj
Lesson6/task1/: functions.cpp  functions.h  task1.cpp  task1.sln  task1.vcxproj  task1.vcxproj.filters
Lesson6/task2/: class.cpp  class.h  task2.cpp  task2.sln  task2.vcxproj  task2.vcxproj.filters
Lesson6/task3/: Figure.cpp  Figure.h  Quadrangle.cpp  Quadrangle.h  Triangle.cpp  Triangle.h  kvadrat.cpp  kvadrat.h  parallelogramm.cpp  romb.cpp  (+14 more)
(+78 files in other folders)
