cmake_minimum_required(VERSION 3.22.0)

project(Figures_cmake)

add_executable(figures task3.cpp Figure.cpp Figure.h Triangle.cpp Triangle.h Quadrangle.cpp Quadrangle.h kvadrat.cpp kvadrat.h parallelogramm.cpp parallelogramm.h pryamougolnik.cpp pryamougolnik.h pryamoug_triangle.cpp pryamoug_triangle.h ravnobedr_triangle.cpp ravnobedr_triangle.h ravnostor_triangle.cpp ravnostor_triangle.h romb.cpp romb.h)